# aios-x

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  animations.css  botcast.js  debate.js  docker-compose.test.yml  docker-compose.yml  execution.js  founder-matching.js  index.html  main.js  market.js  memory.js  motion.js  orchestrator.js  package-lock.json  package.json  particles.js  personas.js  security.js  style.css  ui.js  vault.js  vercel.json  vite.config.js
.github/workflows/: ci.yml  deploy.yml  security-scan.yml
ai-assistant-extension/: manifest.json
ai-assistant-extension/background/: service-worker.js
ai-assistant-extension/content/: content-script.js
ai-assistant-extension/popup/: popup.css  popup.html  popup.js
ai-assistant-extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
botcast-arena-spike/: agents.yaml  debate_graph.yaml  evidence_packet.md
botcast-arena-spike/schemas/: cross_exam.schema.json  judge.schema.json  opening.schema.json  rebuttal.schema.json  risk_discovery.schema.json  synthesis.schema.json
css/: animations.css  style.css
db/: seed.sql
db/migrations/: 001_orgs.sql  002_workspaces.sql  003_projects.sql  004_artifacts.sql  005_audit_events.sql  006_engine_runs.sql  007_billing.sql
js/: apiVault.js  debate.js  execution.js  export.js  main.js  market.js  memory.js  models.js  orchestrator.js  particles.js  security.js  ui.js  voice.js
nexusflow/: Makefile  README.md
nexusflow/architecture/: nexusflow_architecture.json
nexusflow/infra/: .env.example  (+1 more)
nexusflow/libs/core-models/python/: __init__.py  nexusflow_models.py  pyproject.toml
nexusflow/services/gateway/: Dockerfile  pyproject.toml
nexusflow/services/gateway/src/: main.py
nexusflow/services/gateway/tests/: test_gateway.py
nexusflow/services/router/: pyproject.toml
nexusflow/services/router/src/: router.py  routing_rules.yaml
nexusflow/services/router/tests/: test_routing_rules.py
nexusflow/services/sanitizer/: pyproject.toml
nexusflow/services/sanitizer/src/: policy_gate.py
nexusflow/services/sanitizer/tests/: test_policy_gate.py
platformula/: MANUS_BRIEF.md  index.html  main.js  package.json  style.css  vite.config.js
scripts/: install-hooks.sh
security/: SECURITY_RESET_LOG.md  credential-rotation-checklist.md  incident-prevention-baseline.md
(+58 files in other folders)
