[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexusflow-sanitizer"
version = "0.1.0"
description = "TALON policy gate — PII and secret detection, redaction, and compliance enforcement"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "nats-py>=2.7",
    "opentelemetry-sdk>=1.24",
    "nexusflow-core-models",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
