[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexusflow-core-models"
version = "0.1.0"
description = "Canonical Pydantic models and enums shared across all NexusFlow services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
